[gd_scene load_steps=8 format=3 uid="uid://rkuna7geh5u1"]

[ext_resource type="Script" path="res://scenes/vehicles/common/scenes/car/car_main/car_main.gd" id="1_6cwm7"]
[ext_resource type="PackedScene" uid="uid://cwdlhwdhu3mf0" path="res://scenes/vehicles/common/scenes/car/car_door/car_door.tscn" id="2_4leat"]
[ext_resource type="ArrayMesh" uid="uid://b7sghu72o4nj3" path="res://assets/vehicles/suzuki_sx4_sportback/meshes/sx4_sportback_Car_Body.res" id="2_dd1k4"]
[ext_resource type="PackedScene" uid="uid://cx5tiyarhaal4" path="res://scenes/vehicles/common/scenes/car/cameras/car_cameras.tscn" id="4_t40ri"]
[ext_resource type="ArrayMesh" uid="uid://dgg0otaxtu3yg" path="res://assets/vehicles/suzuki_sx4_sportback/meshes/sx4_sportback_Wheel_L.res" id="5_423n0"]
[ext_resource type="ArrayMesh" uid="uid://cllsxarwvcvad" path="res://assets/vehicles/suzuki_sx4_sportback/meshes/sx4_sportback_Wheel_R.res" id="6_d06o3"]
[ext_resource type="PackedScene" uid="uid://rp712ic5ra7n" path="res://scenes/vehicles/common/scenes/car/car_wheel/car_wheel.tscn" id="8_ocx0m"]

[node name="CarMain" type="RigidBody3D"]
mass = 126.0
center_of_mass_mode = 1
center_of_mass = Vector3(0.31, 0, 0)
script = ExtResource("1_6cwm7")
car_body_mesh_resource = ExtResource("2_dd1k4")

[node name="CarBody" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_dd1k4")

[node name="Door_FL_Dummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.773, 0.816, -0.89)

[node name="Door_FL" parent="Door_FL_Dummy" instance=ExtResource("2_4leat")]
max_open_angle = -60.0
rotation_axis = 1

[node name="ExternalHandle" parent="Door_FL_Dummy/Door_FL" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.92172, 0.132569, -0.0205262)

[node name="Door_FR_Dummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.773, 0.816, 0.89)

[node name="Door_FR" parent="Door_FR_Dummy" instance=ExtResource("2_4leat")]
door_location = 1
rotation_axis = 1

[node name="ExternalHandle" parent="Door_FR_Dummy/Door_FR" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.919763, 0.136131, 0.0119827)

[node name="Door_RL_Dummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.307, 0.853, -0.913)

[node name="Door_RL" parent="Door_RL_Dummy" instance=ExtResource("2_4leat")]
door_location = 2
max_open_angle = -60.0
rotation_axis = 1

[node name="ExternalHandle" parent="Door_RL_Dummy/Door_RL" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.825306, 0.150342, 0.0246125)

[node name="Door_RR_Dummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.307, 0.853, 0.913)

[node name="Door_RR" parent="Door_RR_Dummy" instance=ExtResource("2_4leat")]
door_location = 3
rotation_axis = 1

[node name="ExternalHandle" parent="Door_RR_Dummy/Door_RR" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.825568, 0.161506, -0.0274591)

[node name="Wheel_FL_Dummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.264, 0.347, -0.81)

[node name="Wheel_FL" parent="Wheel_FL_Dummy" instance=ExtResource("8_ocx0m")]
wheel_mesh_resource = ExtResource("5_423n0")

[node name="Wheel_FR_Dummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.264, 0.347, 0.81)

[node name="Wheel_FR" parent="Wheel_FR_Dummy" instance=ExtResource("8_ocx0m")]
wheel_mesh_resource = ExtResource("6_d06o3")

[node name="Wheel_RL_Dummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.424, 0.347, -0.81)

[node name="Wheel_RL" parent="Wheel_RL_Dummy" instance=ExtResource("8_ocx0m")]
wheel_mesh_resource = ExtResource("5_423n0")

[node name="Wheel_RR_Dummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.424, 0.347, 0.81)

[node name="Wheel_RR" parent="Wheel_RR_Dummy" instance=ExtResource("8_ocx0m")]
wheel_mesh_resource = ExtResource("6_d06o3")

[node name="Bonnet_Dummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.072, 1.083, 0)

[node name="Boot_Dummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.499, 1.654, 0)

[node name="Steering_Wheel_Dummy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.31, 1.061, -0.356)

[node name="Car_Cameras" parent="." instance=ExtResource("4_t40ri")]

[node name="CentreOfMassVisual" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.306, 0, 0)

[editable path="Door_FL_Dummy/Door_FL"]
[editable path="Door_FR_Dummy/Door_FR"]
[editable path="Door_RL_Dummy/Door_RL"]
[editable path="Door_RR_Dummy/Door_RR"]
